# mdman

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
service/: Cargo.toml
service/src/: config.rs  lib.rs  sync.rs  watcher.rs
src/: config.rs  main.rs  watcher.rs
