[workspace]
resolver = "2"
members = ["cli", "service"]

[workspace.package]
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/yourusername/mdman"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-journald = "0.3"